# fp-bindgen

./: Cargo.toml
examples/: example-build.sh  simple-build.sh
examples/example-plugin/src/: lib.rs
examples/example-protocol/src/: main.rs
examples/example-protocol/src/types/: aliases.rs  mod.rs
examples/example-rust-wasmer-runtime/src/: test.rs
examples/example-rust-wasmer-runtime/src/spec/: bindings.rs  mod.rs  types.rs
examples/example-rust-wasmer-runtime/src/wasi_spec/: bindings.rs  mod.rs
examples/simple-plugin/: Cargo.toml
examples/simple-plugin/src/: lib.rs
examples/simple-protocol/: Cargo.toml
examples/simple-protocol/src/: main.rs
examples/simple-rust-wasmer-runtime/: Cargo.toml
examples/simple-rust-wasmer-runtime/src/: test.rs
examples/simple-rust-wasmer-runtime/src/spec/: bindings.rs  mod.rs
examples/simple-rust-wasmer-runtime/src/wasi_spec/: bindings.rs  mod.rs  types.rs
fp-bindgen-support/: Cargo.toml
fp-bindgen/src/generators/rust_wasmer_runtime/: mod.rs
fp-bindgen/src/generators/ts_runtime/: mod.rs
macros/src/: typing.rs
