[workspace]
exclude = [
  "examples/example-plugin",
  "examples/example-rust-wasmer-runtime",
  "examples/example-rust-wasmer-wasi-runtime",
  "examples/simple-plugin",
  "examples/simple-rust-wasmer-runtime",
  "bindings/rust-plugin",
]
members = [
  "fp-bindgen",
  "fp-bindgen-support",
  "macros",
  "xtask",
  "examples/example-protocol",
  "examples/simple-protocol",
  "examples/redux-example",
]
