[package]
name = "fp-bindgen-support"
description = "Support crate for fp-bindgen"
homepage = "https://github.com/fiberplane/fp-bindgen/"
repository = "https://github.com/fiberplane/fp-bindgen/"
readme = "README.md"
version = "2.4.0"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2018"
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
fp-bindgen-macros = { version = "2.4.0", path = "../macros" }
http = { version = "0.2", optional = true }
once_cell = "1"
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = { version = "1.0.26", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#wasmer = { version = "3", optional = true }
wasmer = { path = "../../wasmer/lib/api", optional = true }
wasmer-compiler-singlepass = { version = "3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasmer = { version = "3", optional = true, default-features = false, features = ["js-default"]}
wasmer = { path = "../../wasmer/lib/api", optional = true, default-features = false, features = ["js-default"]}

[features]
default = []
async = []
host = ["wasmer", "wasmer-compiler-singlepass", "thiserror"]
guest = []
