[package]
authors = ["kajacx <kajacx@gmail.com>, Fiberplane <info@fiberplane.com>"]
edition = "2018"
name = "simple-plugin"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1"
simple-bindings = {path = "../simple-protocol/bindings/rust-plugin"}
once_cell = {version = "1"}
serde_bytes = {version = "0.11"}
tracing = "0.1.37"
